warnings fixes